# astro

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini
astro/: __init__.py  __version__.py  _bootstrap.py  app.py  astro.py  base.py  bash.py  config.py  contexts.py  errors.py  logger.py  main.py  meta.py  paths.py  runtime.py  simms.py  stores.py  system.py  theme.py  types.py  typings.py
astro/agents/: base.py  builder.py  chat.py  code.py  communication.py  context.py  effect.py  memory.py
astro/app/: base.py  chat_stream.py  cli.py  config.py  graph.py  handler.py  renderers.py  state.py  streamlit.css
astro/bots/: openai.py
astro/databases/: base.py  models.py  repository.py
astro/llms/: __init__.py  base.py  contexts.py  prompts.py
astro/llms/prompt-templates/: chat-context.prompt.md  chat-system-1.prompt.md  chat-system-2.prompt.md  chat-system.prompt.md  chat-welcome-1.prompt.md  chat-welcome.prompt.md
astro/logging/: base.py  viewer.py
astro/loggings/: __init__.py  base.py  textual.css  viewer.py  viewer.py.bak
astro/tools/: text.py
astro/typings/: __init__.py  base.py  callables.py  contexts.py  inputs.py  outputs.py
astro/utilities/: __init__.py  caches.py  display.py  functions.py  lookup.py  other.py  scoring.py  security.py  system.py  timing.py  uid.py  uids.py
docs/: RELEASE-COMPLETE.md  beta-release-summary.md  beta-release.md  dependency-policy.md  planning-agent-plan.md
examples/: __init__.py
examples/custom_tools/: README.md  __init__.py  helpers.py  observatory.py  run_custom_cli.py
examples/galaxy_classification/: classify_image.py  galaxy-classify.py
scripts/: README.md  __init__.py  chat-system-1.prompt.md  generate_starfield_image.py  input-prompts  md-to-pdf.py  md-to-pdf.sh  prompt-refiner.py.bak  prompt_refiner.py  runner.py  unicode-test.py
scripts/outputs/: chat-system-1-gemma3:latest-v1.md  chat-system-1-gemma3:latest-v2.md  chat-system-1-gemma3:latest-v3.md  chat-system-1-gemma3:latest-v4.md  chat-system-1-gemma3:latest-v5.md  chat-system-1-gpt-oss:latest-v1.md  chat-system-1-gpt-oss:latest-v2.md  chat-system-1-gpt-oss:latest-v3.md  chat-system-1-gpt-oss:latest-v4.md  chat-system-1-gpt-oss:latest-v5.md  chat-system-1-gpt-oss:latest-v6.md  chat-system-1-gpt-oss:latest-v7.md  chat-system-2-codellama-latest-v1.md  chat-system-2-deepseek-r1-14b-v1.md  chat-system-2-deepseek-r1-8b-v1.md  chat-system-2-gemma3:latest-v1.md  chat-system-2-gemma3n:e4b-v1.md  chat-system-2-gpt-4o-mini-v1.md  chat-system-2-gpt-4o-v1.md  chat-system-2-gpt-oss:latest-v1.md  chat-system-2-gpt-oss:latest-v2.md  chat-system-2-llama3-latest-v1.md  chat-system-2-llava-13b-v1.md  chat-system-2-mistral-7b-v1.md  chat-system-2-phi-14b-v1.md  chat-system-3-gpt-oss-latest-v1.md
src/: console.py  main.py
tests/: conftest.py  test_latex_to_text.py  test_model_file_store.py  test_pytest_examples.py
