[project]
    authors = [
        { name = "Brian Welman", email = "brianallisterwelman@gmail.com" },
        { name = "Casey Chuma", email = "caseymovex@gmail.com" },
    ]
    name = "astro"
    version = "0.1.0"
    description = "Radio Astronomy AI Assistant"
    readme = "README.md"
    requires-python = ">=3.12"
    dependencies = [
        "anthropic>=0.62.0",
        "appdirs>=1.4.4",
        "blake3>=1.0.5",
        "click>=8.1.8",
        "distro>=1.9.0",
        "docstring-parser>=0.16",
        "langchain>=0.3.27",
        "langchain-anthropic>=0.3.18",
        "langchain-community>=0.3.27",
        "langchain-core>=0.3.74",
        "langchain-deepseek>=0.1.4",
        "langchain-ollama>=0.3.6",
        "langchain-openai>=0.3.29",
        "langgraph>=0.6.4",
        "ollama>=0.5.3",
        "openai>=1.75.0",
        "pydantic[email]>=2.10.3",
        "python-dotenv>=1.0.1",
        "pyyaml>=6.0.2",
        "rich>=13.9.4",
        "sqlmodel>=0.0.24",
        "streamlit>=1.49.0",
        "textual>=3.2.0",
]


[build-system]
    requires      = ["hatchling"]
    build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "mdformat>=0.7.22",
    "mdformat-gfm>=0.4.1",
    "mdformat-tables>=1.0.0",
    "pytest-ruff>=0.5",
    "pytest-black>=0.6.0",
    "pytest-mypy>=1.0.1",
]

[project.scripts]
astro-start = "astro.app.base:astro_start"
astro-logs = "astro.loggings.viewer:view_logs"

# Development/Testing scripts (only work when dev dependencies installed)
test = "scripts.test_runner:test_all"
test-cov = "scripts.test_runner:test_with_coverage"
test-unit = "scripts.test_runner:test_unit"
test-filesystem = "scripts.test_runner:test_filesystem"
test-integration = "scripts.test_runner:test_integration"
test-fast = "scripts.test_runner:test_fast"
test-slow = "scripts.test_runner:test_slow"
test-watch = "scripts.test_runner:test_watch"
test-debug = "scripts.test_runner:test_debug"
test-failed = "scripts.test_runner:test_failed"

# Code Quality scripts
test-ruff = "scripts.test_runner:test_ruff"
test-black = "scripts.test_runner:test_black"
test-mypy = "scripts.test_runner:test_mypy"
test-quality = "scripts.test_runner:test_quality"
test-full = "scripts.test_runner:test_all_with_quality"

# Tool configurations
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]
ignore = [
    "E501",  # line too long, handled by black
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=astro",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=90"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "slow: Slow running tests",
    "filesystem: Tests that interact with the filesystem"
]
